# swiftsc-runtime

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: adapter.rs  gas.rs  lib.rs  simulator.rs
