[package]
name = "swiftsc-runtime"
version = "1.0.0"
edition = "2021"
authors = ["SwiftSC-Lang Contributors"]
description = "Runtime library for SwiftSC-Lang smart contracts"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-runtime"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
